--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
 	"name": "proshop",
 	"version": "1.0.0",
-	"description": "add product",
+	"description": "MERN shopping cart app",
+	"proxy": "http://127.0.0.1:3000",
 	"main": "server.js",
 	"type": "module",
 	"scripts": {
@@ -10,30 +11,24 @@
 		"client": "npm start --prefix frontend",
 		"dev": "concurrently \"npm run server\" \"npm run client\"",
 		"data:import": "node backend/seeder",
-		"data:destroy": "node backend/seeder -d"
+		"data:destroy": "node backend/seeder -d",
+		"heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
 	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/Mahfod-dev/PROSHOP.git"
-	},
-	"author": "Mahfod.dev",
-	"license": "ISC",
-	"bugs": {
-		"url": "https://github.com/Mahfod-dev/PROSHOP/issues"
-	},
-	"homepage": "https://github.com/Mahfod-dev/PROSHOP#readme",
+	"author": "Mahfod Addi",
+	"license": "MIT",
 	"dependencies": {
 		"bcryptjs": "^2.4.3",
 		"colors": "^1.4.0",
-		"cors": "^2.8.5",
-		"dotenv": "^10.0.0",
-		"express": "^4.17.2",
-		"express-async-handler": "^1.2.0",
+		"dotenv": "^8.2.0",
+		"express": "^4.17.1",
+		"express-async-handler": "^1.1.4",
 		"jsonwebtoken": "^8.5.1",
-		"mongoose": "^6.1.4"
+		"mongoose": "^5.10.6",
+		"morgan": "^1.10.0",
+		"multer": "^1.4.2"
 	},
 	"devDependencies": {
-		"concurrently": "^6.2.1",
-		"nodemon": "^2.0.12"
+		"concurrently": "^5.3.0",
+		"nodemon": "^2.0.4"
 	}
 }
